--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -1471,7 +1471,7 @@ section {
 }
 
 .team-card--details {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
